      tests.
    + Reactivate --no-verbose mode.  Closes: #815645 
    + Fix --destdir for version 4.  Closes:#814686
    + Always use uscan_warn and uscan_die.
    + Die if the action script fails.  Closes: #810976
  * test_uscan:
    + Fix non-{Debian,Ubuntu} cases.  Closes: #816645
  * debsnap:
    + Add --list option.  Closes: #610048, #679763, #816910

  [ Dominique Dumont ]
  * licensecheck:
    + parse (c) owner with email like info@foo.com

  [ James McCoy ]
  * debsnap:
    + Only make the destination directory if there is something to download.
      (Closes: #816022)
    + Add --first & --last options to define a range of versions to download.
      Based on a patch by Ivo De Decker.  (Closes: #675867)
  * uscan:
    + Fix typo in dirversionmangle help.  (Closes: #816231)
  * grep-excuses:
    + Report excuses even when autoremoval info isn't reachable.  (Closes:
      #816723)

  [ Johannes Schauer ]
  * build-rdeps:
    + Improve dependency resolver using dose3.  Closes: #797858

  [ Andreas Bombe ]
  * mk-build-deps:
    + Typo fix. Closes: #770642

 -- Osamu Aoki <osamu@debian.org>  Sat, 13 Feb 2016 22:10:05 +0900

devscripts (2.16.1) unstable; urgency=medium

  [ Antonio Terceiro ]
  * uscan:
    - fix regression in uscan when --destdir is set (Closes: #809662)
      Patch by Alex Mestiashvili <mailatgoogl@gmail.com>
    - fix crash when --rename is passed  (Closes: #812417)
    - when scanning for directories called 'debian', ignore the ones that
      don't have a file called 'watch'. This removes several annoying warnings
      when uscan is run on a package that has several directories called
      'debian' in its upstream source.
    - fix English phrases when logging download-related actions
  * mk-build-deps:
    - When installing, pass `-o Debug::pkgProblemResolver=yes` to `apt-get
      install` so that when build dependencies can't be satisfied, you know why.
      Otherwise it would just tell you that the *-build-deps package needs to