@@ -2,21 +2,29 @@
 .SH NAME
 manpage-alert \- check for binaries without corresponding manpages
 .SH SYNOPSIS
-\fBmanpage-alert\fR [\fIpath list\fR]
-.br
-\fBmanpage-alert \-\-help\fR|\fB\-\-version\fR
+\fBmanpage-alert\fR [\fIoptions\fR] [\fIpaths\fR]
 .SH DESCRIPTION
 \fBmanpage-alert\fR searches the given list of paths for binaries without
 corresponding manpages.
 .P
-If no paths are specified on the command line, the path list
+If no \fIpaths\fR are specified on the command line, the path list
 \fI/bin /sbin /usr/bin /usr/sbin /usr/games\fR will be assumed.
 .SH OPTIONS
-.BR \-\-help ", " \-h
+.TP
+.BR \-h\fR, \fB\-\-help
 Show a summary of options.
 .TP
-.BR \-\-version ", " \-v
+.BR \-v\fR, \fB\-\-version
 Show version and copyright information.
+.TP
+.BR \-f\fR, \fB\-\-file
+Show filenames of missing manpages without any leading text.
+.TP
+.BR \-p\fR, \fB\-\-package
+Show filenames of missing manpages with their package name.
+.TP
+.BR \-n\fR, \fB\-\-no\-stat
+Do not show statistics at the end.
 .SH AUTHOR
 \fBmanpage-alert\fR was written by Branden Robinson and modified by
 Julian Gilbey <jdg@debian.org> and Adam D. Barratt
@@ -25,4 +33,3 @@ devscripts package.
 .P
 This manpage and the associated program are licensed under the terms of
 the GPL, version 2 or later.
-
