@@ -13,6 +13,8 @@ devscripts (2.16.2) UNRELEASED; urgency=medium
     + Fix non-{Debian,Ubuntu} cases.  Closes: #816645
   * debsnap:
     + Add --list option.  Closes: #610048, #679763, #816910
+  * manpage-alert:
+    + Show package name etc.  Closes: #497320
 
   [ Dominique Dumont ]
   * licensecheck:
